Fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,17 @@
   text-align: center;
 }
 
-.app__container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  min-height: 90vh;
-}
-
-.app__text {
+.app__messages {
   margin-bottom: 3rem;
+  height: 70vh;
+  overflow-y: scroll;
 }
 
 .app__footer {
   width: 100%;
+  position: fixed;
+  bottom: 0;
+  padding: 10px;
 }
 
 .app__footer-text {
@@ -23,9 +21,30 @@
   font-size: 0.8rem;
 }
 
-@media only screen and (min-width: 400px) {
-  .app__container {
-   min-height: 68vh;
+/* Hide scrollbar for Chrome, Safari and Opera */
+.app__messages::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.app__messages {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+@media only screen and (min-width: 380px) {
+  .app__messages {
+    margin-bottom: 3rem;
+    height: 75vh;
+    overflow-y: scroll;
+  }
+}
+
+@media only screen and (min-width: 520px) {
+  .app__messages {
+    margin-bottom: 3rem;
+    height: 70vh;
+    overflow-y: scroll;
   }
 }
 
@@ -34,8 +53,26 @@
       font-size: 4rem;
   }
 
+  .app__messages {
+    margin-bottom: 3rem;
+    height: 62vh;
+    overflow-y: scroll;
+  }
+
   .app__footer-text {
     font-size: 1.4rem;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .app__messages {
+    height: 68vh;
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  .app__messages {
+    height: 72vh;
   }
 }
 
@@ -46,5 +83,17 @@
 
   .app__footer-text {
     font-size: 1rem;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .app__messages {
+    height: 72vh;
+  }
+}
+
+@media only screen and (min-width: 1300px) {
+  .app__messages {
+    height: 68vh;
   }
 }
