--- a/src/components/TextField/TextField.css
+++ b/src/components/TextField/TextField.css
@@ -27,6 +27,13 @@
     background-color: transparent;
 }
 
+@media only screen and (min-width: 280px) and (max-width: 380px) {
+    .textfield {
+        width: 60%;
+        font-size: 0.9rem;
+    }
+}
+
 @media only screen and (min-width: 768px) {
     .textfield {
         font-size: 1.8rem;
